# evproj-DIS

./: .gitignore  README.md
data/: default.frag  default.vert  test_vehicle.cfg
firmware/: Cargo.toml  build.sh  deploy.sh
firmware/.cargo/: config
firmware/src/: main.rs  vehicle.rs
firmware/src/ebola/: lib.rs  renderer.rs  texture.rs
sysroot/: prepare_sysroot_from_rpi.sh
