[package]
name = "firmware"
version = "0.1.0"
authors = ["Martin Zielinski <darthcoder1@gmail.com>"]

[lib]
name = "ebola"
path = "src/ebola/lib.rs"

[[bin]]
name = "firmware"
path = "src/main.rs"

[dependencies]
videocore = "*"
egl = "*"
image = "*"
cgmath = "*"
# disabled as the crate on crate.io is having a bug, while the repo is working fine
# opengles  = "0.1.2"

[dependencies.opengles]
path = "../../../../External/rust-opengles"